Corrected avatar size on small screens.

--- a/static/base.css
+++ b/static/base.css
@@ -60,3 +60,11 @@ h2 {
 span.msg {
     font-style: italic;
 }
+
+@media (max-width: 767px) {
+    img.avatar {
+        padding-top: 15px;
+        height: 350px;
+        width: 350px;
+    }
+}
